Seeded the db with flights

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,9 +1,2 @@
-<h1 class="text-center text-primary mt-4 text-uppercase">Flights</h1>
-
-<div class="container">
-  <ul class="list-unstyled">
-    <% @flights.each do |flight| %>
-      <li class="my2"> <%= flight.code %> </li>
-
-    <% end %>
-</div>
+<h1 class="text-uppercase text-primary text-center my-3">Flight-Booker</h1>
+<% byebug %>
