--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
   			<p class="alert"><%= alert %></p>
   		</div>
   	<% end %>
+    <div class="bg-dark text-center py-2">
+      <h2 class='text-light'>Flight Booker</h2>
+    </div>
     <div class="container">
       <%= yield %>
     </div>
