--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,7 +1,7 @@
 
-<div class="container mt-5 form-group">
+<div class="container mt-5">
   <h2 class="text-center my-5">Search Flights</h2>
-  <%= form_with(url: "/flights", method: "get", local: true) do |f| %>
+  <%= form_with(url: "/flights", method: "get", local: true, class: "") do |f| %>
   
     <div class="form-group">
       <%= f.label :to, class: "mr-4" %>
@@ -21,7 +21,6 @@
     <div class="form-group">
       <%= f.label :departure_date, "Departure Date" %>
       <%= select_date(Time.now) %>
-
     </div>
 
     <div class="form-group">
