--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   		</div>
   	<% end %>
     <div class="bg-dark text-center py-2">
-      <h2 class='text-light'>Flight Booker</h2>
+      <%= link_to 'Flight Booker', root_path, class: "text-light h2"%>
     </div>
     <div class="container">
       <%= yield %>
