--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,7 @@
 
 <h1 class="text-center my-2">New Booking</h1>
 
-<div class="card mb-3" style="width: 18rem;">
+<div class="card mb-3 mx-auto" style="width: 18rem;">
   <div class="card-body">
     <h4 class="card-title">Odin Airways!</h4>
     <h5 class="card-subtitle mb-2 text-muted">FROM: <strong><%= link_to @from.code, '' %></strong></h5>
@@ -9,19 +9,27 @@
   </div>
 </div>
 
-<h3 class="text-primary">Passenger Details!</h3>
-<%= form_for @booking do |f| %>
-  <div class="form-group">
+<h3 class="text-primary text-center">Passenger Details!</h3>
+<%= form_for  @booking do |f| %>
+  <div class="form-group mx-auto" style="width: 33rem;">
+
     <%= f.fields_for :passenger do |ff| %>
-    <div class="form-group">
+    <div class="form-group text-center">
       <%= ff.label :first_name, "First name" %>
-      <%= ff.text_field :first_name %>
+      <%= ff.text_field :first_name, class:'form-control' %>
     </div>
 
-    <div class="form-group">
+
+    <div class="form-group text-center">
       <%= ff.label :last_name, "Last name" %>
-      <%= ff.text_field :last_name %>
+      <%= ff.text_field :last_name, class:'form-control' %>
     </div>
+
+    <div class="form-group text-center">
+      <%= ff.label :email, "Email" %>
+      <%= ff.text_field :email, class:'form-control' %>
+    </div>
+
    <% end %>
   </div>
 <% end %>
