--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,9 +3,12 @@
 
 <div class="card mb-3 mx-auto" style="width: 18rem;">
   <div class="card-body">
-    <h4 class="card-title">Odin Airways!</h4>
+    <h4 class="card-title text-primary"><strong>Odin Airways!</strong></h4>
     <h5 class="card-subtitle mb-2 text-muted">FROM: <strong><%= link_to @from.code, '' %></strong></h5>
     <h5 class="card-subtitle text-muted">TO : <strong><%= link_to @to.code, '' %></strong></h5>
+    <p class="card-text mt-3">Departure time: <strong class="text-primary"><%= @flight.departure_time.strftime('%d/%m/%Y') %></strong></p>
+    <p class="card-text">Travel duration: <strong class="text-primary"><%= @flight.travel_duration %></strong></p>
+    <p class="card-text">No. of passengers: <strong class="text-primary"><%= @flight.passengers %></strong></p>
   </div>
 </div>
 
@@ -29,7 +32,9 @@
       <%= ff.label :email, "Email" %>
       <%= ff.text_field :email, class:'form-control' %>
     </div>
-
+    <div class="form-group">
+      <%= ff.submit %>
+    </div>
    <% end %>
   </div>
 <% end %>
