Still can't figure tables

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -14,11 +14,12 @@
 
 <h3 class="text-primary text-center">Passenger Details!</h3>
 
-<%= form_for  @booking do |f| %>
+<%= form_for @booking do |f| %>
   <div class="form-group mx-auto" style="width: 33rem;">
     <% @passengers.to_i.times do |no| %>
+
       <h3 class="text-center text-warning"><%= "Passenger #{no + 1}"%></h3>
-      <%= f.fields_for :passenger do |ff| %>
+      <%= f.fields_for @booking.passengers.build do |ff| %>
         <div class="form-group text-center">
           <%= ff.label :first_name, "First name" %>
           <%= ff.text_field :first_name, class:'form-control' %>
@@ -34,9 +35,11 @@
           <%= ff.text_field :email, class:'form-control' %>
         </div>
       <% end %>
-    <hr />
+    <hr class="my-5" />
     <% end %>
-  <%= f.submit :Book, value:"Book This Flight", class:"mx-auto btn btn-primary" %>
+
+  <%= f.hidden_field :flight_id, value: params[:flight_id] %>
+  <%= f.submit :Book, value:"Book This Flight", class:"btn btn-primary" %>
 
   </div>
 <% end %>
