Retouched form to wrap around the whole table's body rather than just a row

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -60,7 +60,7 @@
           <td><%= f.check_box :pick  %></td>
         </tr>
         <% end %>
-    <%= f.submit "book", value: "Book", name: nil, class: "btn btn-primary" %>
+    <%= f.submit "book", value: "Book", name: nil, class: "btn btn-success" %>
     <% end %>
   </table>
 
