--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -46,8 +46,8 @@
       <th>Picked?</th>
     </tr>
 
-    <%= form_with url: "/bookings/new", method: "get", local: true do |f| %>
       <% @available_flights.each do |flight| %>
+      <%= form_with url: "/bookings/new", method: "get", local: true do |f| %>
         <tr>
           <td><%= flight.id %></td>
           <td><%= flight.from_airport.code %></td>
@@ -57,10 +57,9 @@
           <td><%= flight.travel_duration %></td>
           <%= f.hidden_field :flight_id , value: flight.id %>
           <%= f.hidden_field :passengers, value: params[:passengers] %>
-          <td><%= f.check_box("flight")  %></td>
+          <td><%= f.submit "Book this Flight",  class:"btn btn-success"%></td>
         </tr>
-        <% end %>
-    <%= f.submit "booking", value: "Book", name: nil, class: "btn btn-success" %>
+      <% end %>
     <% end %>
   </table>
 
