--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FlightBooker</title>
+    <title>Odin Airways</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -21,7 +21,7 @@
   		</div>
   	<% end %>
     <div class="bg-dark text-center py-2">
-      <%= link_to 'Flight Booker', root_path, class: "text-light h2"%>
+      <%= link_to 'Odin Airways', root_path, class: "h2 text-warning"%>
     </div>
     <div class="container">
       <%= yield %>
