--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -8,7 +8,7 @@
     <h5 class="card-subtitle text-muted">TO : <strong><%= link_to @to.code, '' %></strong></h5>
     <p class="card-text mt-3">Departure time: <strong class="text-primary"><%= @flight.departure_time.strftime('%d/%m/%Y') %></strong></p>
     <p class="card-text">Travel duration: <strong class="text-primary"><%= @flight.travel_duration %></strong></p>
-    <p class="card-text">No. of passengers: <strong class="text-primary"><%= @flight.passengers %></strong></p>
+    <p class="card-text">No. of passengers: <strong class="text-primary"><%= @booking.passenger %></strong></p>
   </div>
 </div>
 
@@ -19,7 +19,7 @@
     <% @passengers.to_i.times do |no| %>
 
       <h3 class="text-center text-warning"><%= "Passenger #{no + 1}"%></h3>
-      <%= f.fields_for :passengers,  do |ff| %>
+      <%= f.fields_for :passengers  do |ff| %>
         <div class="form-group text-center">
           <%= ff.label :first_name, "First name" %>
           <%= ff.text_field :first_name, class:'form-control' %>
@@ -43,3 +43,4 @@
 
   </div>
 <% end %>
+<% byebug %>
