--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -16,27 +16,24 @@
 
 <%= form_for @booking do |f| %>
   <div class="form-group mx-auto" style="width: 33rem;">
-    <% @no_of_passengers.times do |no| %>
 
-      <h3 class="text-center text-warning"><%= "Passenger #{no + 1}"%></h3>
+    <%= f.fields_for :passengers, @passengers do |ff| %>
 
-      <%= f.fields_for :passengers do |ff| %>
+      <div class="form-group text-center">
+        <%= ff.label :first_name, "First name" %>
+        <%= ff.text_field :first_name, class:'form-control' %>
+      </div>
 
-        <div class="form-group text-center">
-          <%= ff.label :first_name, "First name" %>
-          <%= ff.text_field :first_name, class:'form-control' %>
-        </div>
+      <div class="form-group text-center">
+        <%= ff.label :last_name, "Last name" %>
+        <%= ff.text_field :last_name, class:'form-control' %>
+      </div>
 
-        <div class="form-group text-center">
-          <%= ff.label :last_name, "Last name" %>
-          <%= ff.text_field :last_name, class:'form-control' %>
-        </div>
+      <div class="form-group text-center">
+        <%= ff.label :email, "Email" %>
+        <%= ff.text_field :email, class:'form-control' %>
+      </div>
 
-        <div class="form-group text-center">
-          <%= ff.label :email, "Email" %>
-          <%= ff.text_field :email, class:'form-control' %>
-        </div>
-      <% end %>
 
     <hr class="my-5" />
 
