--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -4,26 +4,27 @@
 
   <hr class="my-2" />
 
-  <h2>Flight Details: </h2>
+  <h2 class="text-primary">Flight Details: </h2>
 
   <hr class="my-2" />
 
-  <h3 class='mb-2'>Flight number: <%= @flight.id %></h3>
-  <h3 class='mb-2'>FROM: <%= @from.code %>
-  <h3 class='mb-2'>TO: <%= @to.code %>
-  <h3 class='mb-2'>Departure Time: <%= @flight.departure_time.strftime('%d/%m/%Y %H:%M') %></h3>
-  <h3>Travel duration: <%= @flight.travel_duration %></h3>
+  <h3 class='mb-2'>Flight number: <strong><%= @flight.id %></strong></h3>
+  <h3 class='mb-2'>FROM: <strong><%= @from.code %></strong></h3>
+  <h3 class='mb-2'>TO: <strong><%= @to.code %></strong>
+  <h3 class='mb-2'>Departure Time: <strong><%= @flight.departure_time.strftime('%d/%m/%Y %H:%M') %></strong></h3>
+  <h3>Travel duration: <strong><%= @flight.travel_duration %></strong></h3>
 
   <hr class="my-2" />
 
-  <h2>Passengers Information: </h2>
+  <h2 class="text-primary">Passengers Information: </h2>
 
+  <hr class="my-2" />
 
   <% @booking.passengers.each do |passenger| %>
 
-  <h3 class='mb-2'>First Name: <%= passenger.first_name %> </h3>
-  <h3 class='mb-2'>Last Name: <%= passenger.last_name %> </h3>
-  <h3 class='mb-2'>Email: <%= passenger.email %> </h3>
+  <h3 class='mb-2'>First Name: <strong><%= passenger.first_name %></strong> </h3>
+  <h3 class='mb-2'>Last Name: <strong><%= passenger.last_name %></strong> </h3>
+  <h3 class='mb-2'>Email: <strong><%= passenger.email %></strong> </h3>
 
   <hr class="my-2" />
   <% end %>
