--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,21 @@
   			<p class="alert"><%= alert %></p>
   		</div>
   	<% end %>
-    <div class="bg-dark text-center py-2">
-      <%= link_to 'Odin Airways', root_path, class: "h2 text-warning"%>
+    <div class="px-4 bg-dark text-center py-2 d-flex justify-content-between align-items-center">
+      <% if !current_user %> 
+        <div style="width: 22%;"></div>
+        <%= link_to 'Odin Airways', root_path, class: "h2 text-warning" %>
+        <div>
+          <%= link_to 'Sign up', new_user_registration_path , class: "h4 text-info" %> 
+          <%= link_to 'Sign in', new_user_session_path, class: "h4 text-info" %>
+        </div>
+        
+      <% else %>
+        <div style="width: 22%;"></div>
+        <%= link_to 'Odin Airways', root_path, class: "h2 text-warning" %>
+        <%= link_to 'Sign out', destroy_user_session_path, class:"h4 text-danger"%>
+      <% end %>
+      
     </div>
     <div class="container">
       <%= yield %>
