styled buttons for sign-up/sign-in and top navbar

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", class:"btn btn-success" %>
+    <%= f.button :submit, "Sign up", class:" mx-1 btn btn-success" %>
   </div>
 <% end %>
 
