--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,18 @@
 
   <body>
     <% if flash[:notice] %>
-  		<div class="notification is-primary global-notification">
-  			<p class="notice"><%= notice %></p>
+  		<div class="alert alert-primary mb-0">
+  			<h3 class="notice"><%= notice %></h3>
   		</div>
   	<% end %>
   	<% if flash[:alert] %>
-  		<div class="notification is-danger global-notification">
-  			<p class="alert"><%= alert %></p>
+  		<div class="alert alert-danger mb-0">
+  			<h3 class="alert"><%= alert %></h3>
   		</div>
   	<% end %>
-    <div class="px-4 bg-dark text-center py-2 d-flex justify-content-between align-items-center">
+    <div class="my-0 px-4 bg-dark text-center py-2 d-flex justify-content-between align-items-center">
       <% if !user_signed_in? %> 
-        <div style="width: 22%;"></div>
+        <%= link_to 'My bookings', your_bookings_path, class: "h4 text-light" %>
         <%= link_to 'Odin Airways', root_path, class: "h2 text-warning" %>
         <div>
           <%= link_to 'Sign up', new_user_registration_path , class: "h4 text-info" %> 
@@ -30,7 +30,7 @@
         </div>
         
       <% else %>
-        <div style="width: 18%;"></div>
+        <%= link_to 'My bookings', your_bookings_path, class: "h4 text-light" %>
         <%= link_to 'Odin Airways', root_path, class: "h2 text-warning" %>
         <%= link_to 'Sign out', destroy_session_path(current_user), method: :delete, class:"h4 text-danger"%>
       <% end %>
