did a bit of styling

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -28,4 +28,10 @@
 
   <hr class="my-2" />
   <% end %>
+  
+  <h2 class="text-primary">User Details: </h2>
+
+  <hr class="my-2" />
+
+  <h3 class="mb-2">Email: <strong><%= @user_booking.email %></strong></h3>
 </div>
