--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -2,4 +2,4 @@
 <h1 class="text-info mt-3">Your Bookings </h1>
 <hr class="my-3"/>
 
-<%= render partial: 'feed', locals: {@bookings: user_bookings} %>
+<%= render partial: 'feed', locals: {bookings: @user_bookings} %>
