--- a/app/views/bookings/_feed.html.erb
+++ b/app/views/bookings/_feed.html.erb
@@ -1,9 +1,12 @@
 <%# @bookings = @user_bookings if @user_bookings %>
+<% bookings = @bookings unless @user_bookings %>
 
-<h1 class="text-center text-primary mt-4">Current Bookings(<%= @bookings.count %>): </h1>
-<% @bookings.each do |booking| %>
+<h1 class="text-center text-primary mt-4">Current Bookings(<%= bookings.count %>): </h1>
+<% bookings.each do |booking| %>
   <div class="card mx-auto my-3 px-3 py-3 text-center" style="width: 24rem;">
+    
     <h4 class="card-title">Odin Airways</h4>
+    <h5 class="card-subtitle text-danger">DATE: <strong><%= Flight.find(booking.flight_id).departure_time.strftime('%d/%m/%Y %H:%M') %></strong></h5>
     <h5 class="card-subtitle mt-1">FROM: <strong><%= Airport.find(booking.flight.from_airport_id).code%></strong>  </h5>
     <h5 class="card-subtitle mt-1">TO : <strong><%= Airport.find(booking.flight.to_airport_id).code %></strong></h5>
     <p class="card-text h3"><%= link_to 'See Booking', booking_path(booking), class:"text-warning" %> </p>
