--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -3,35 +3,32 @@
   <h2 class="text-center my-5">
     Search Flights
   </h2>
-  <%= form_with(url: "/flights", method: "get", local: true, class: "") do |f| %>
-    <div class="form-group container mx-auto">
+  <%= form_with url: "/flights", method: "get", local: true do |f| %>
     
       <div class="form-group">
-        <%= f.label :to, class: "mr-3" %>
-        <%= f.collection_select(:from_airport_id, @airports, :id, :code) %>
+      <%= f.label :to, class: "mr-3" %>
+      <%= f.collection_select :from_airport_id, @airports, :id, :code %>
       </div>
 
       <div class="form-group">
-        <%= f.label :from %>
-        <%= f.collection_select(:to_airport_id, @airports, :id, :code, html_options: {class: "form-control"}) %>
+      <%= f.label :from %>
+      <%= f.collection_select :to_airport_id, @airports, :id, :code, class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.label :no_of_passengers, "Passengers" %>
-        <%= f.select(:passengers, [ ['One',1], ['Two',2], ['Three',3], ['Four',4] ], html_options: {class: "form-control"}) %>
+      <%= f.label :no_of_passengers, "Passengers" %>
+      <%= f.select(:passengers, [ ['One',1], ['Two',2], ['Three',3], ['Four',4] ], html_options: {class: "form-control"}) %>
       </div>
 
       <div class="form-group">
-        <%= f.label :departure_time, "Departure Time" %>
-        <%= date_select("flight", "departure_time", html_options: {class: "form-control"}) %>
+      <%= f.label :departure_time, "Departure Time" %>
+      <%= date_select "flight", "departure_time", class:"form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.submit value: "Search", name: nil, class: "btn btn-primary" %>
+      <%= f.submit value: "Search", name: nil, class: "btn btn-primary" %>
       </div>
 
-    </div>
-    <% #byebug %>
   <% end %>
 </div>
 
