--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -7,22 +7,23 @@
     
       <div class="form-group">
       <%= f.label :to, class: "mr-3" %>
-      <%= f.collection_select :from_airport_id, @airports, :id, :code %>
+      <%= f.collection_select :from_airport_id, @airports, :id, :code, :selected => @to.code %>
       </div>
 
       <div class="form-group">
       <%= f.label :from %>
-      <%= f.collection_select :to_airport_id, @airports, :id, :code, class: "form-control" %>
+      <%= f.collection_select :to_airport_id, @airports, :id, :code, :selected => @from.code %>
       </div>
+      
 
       <div class="form-group">
       <%= f.label :no_of_passengers, "Passengers" %>
-      <%= f.select(:passengers, [ ['One',1], ['Two',2], ['Three',3], ['Four',4] ], html_options: {class: "form-control"}) %>
+      <%= f.select :passengers, [ ['One',1], ['Two',2], ['Three',3], ['Four',4] ], :selected => params[:passengers] %>
       </div>
 
       <div class="form-group">
       <%= f.label :departure_time, "Departure Time" %>
-      <%= date_select "flight", "departure_time", class:"form-control" %>
+      <%= date_select "flight", "departure_time", :selected => @date %>
       </div>
 
       <div class="form-group">
@@ -69,6 +70,6 @@
   <%= f.submit "Book this Flight",  class:" text-center mx-auto d-block btn btn-success"%>
   <% end %>
 
-
+ <%= p params %>
     
 <% end %>
