--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -6,15 +6,14 @@
   <%= form_with url: "/flights", method: "get", local: true do |f| %>
     
       <div class="form-group">
-      <%= f.label :to, class: "mr-3" %>
-      <%= f.collection_select :from_airport_id, @airports, :id, :code, :selected => @to.code %>
-      </div>
-
-      <div class="form-group">
       <%= f.label :from %>
       <%= f.collection_select :to_airport_id, @airports, :id, :code, :selected => @from.code %>
       </div>
       
+      <div class="form-group">
+      <%= f.label :to, class: "mr-3" %>
+      <%= f.collection_select :from_airport_id, @airports, :id, :code, :selected => @to.code %>
+      </div>
 
       <div class="form-group">
       <%= f.label :no_of_passengers, "Passengers" %>
@@ -23,7 +22,7 @@
 
       <div class="form-group">
       <%= f.label :departure_time, "Departure Time" %>
-      <%= date_select "flight", "departure_time", :default => Date.today, :selected => @date %>
+      <%= date_select "flight", "departure_time", :default => DateTime.now(), :selected => @date %>
       </div>
 
       <div class="form-group">
