--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -3,8 +3,8 @@
   <h2 class="text-center my-5">
     Search Flights
   </h2>
+
   <%= form_with url: "/flights", method: "get", local: true do |f| %>
-    
       <div class="form-group">
       <%= f.label :from %>
       <%= f.collection_select :to_airport_id, @airports, :id, :code, :selected => @from.code %>
@@ -22,13 +22,13 @@
 
       <div class="form-group">
       <%= f.label :departure_time, "Departure Time" %>
-      <%= date_select "flight", "departure_time", :default => DateTime.now(), :selected => @date %>
+      <%= date_select "flight", "departure_time", default: 3.days.from_now, :selected => @date %>
       </div>
 
       <div class="form-group">
       <%= f.submit value: "Search", name: nil, class: "btn btn-primary" %>
       </div>
-
+  
   <% end %>
 </div>
 
